--- a/filemanager/src/main/res/values-uk/strings.xml
+++ b/filemanager/src/main/res/values-uk/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <string name="app_name">FileManager</string>
 
+    <!-- Date/time format order (%1$s: date; %2$s: time) -->
+    <string name="datetime_format_order">%1$s %2$s</string>
+
     <!-- The parent directory of the current directory in navigation view -->
     <string name="parent_dir">Домашня папка</string>
     <!-- External storage descripton -->
