--- a/filemanager/src/main/res/values/strings.xml
+++ b/filemanager/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <string name="app_name">FileManager</string>
 
+    <!-- Date/time format order (%1$s: date; %2$s: time) -->
+    <string name="datetime_format_order">%1$s %2$s</string>
+
     <!-- The parent directory of the current directory in navigation view -->
     <string name="parent_dir">Parent folder</string>
     <!-- External storage descripton -->
@@ -14,5 +17,14 @@
     <string name="size_kilobytes">kB</string>
     <string name="size_megabytes">MB</string>
     <string name="size_gigabytes">GB</string>
+
+    <!--  Filetime formats -->
+    <string name="filetime_format_mode_ddMMyyyy_HHmmss" translatable="false">dd/mm/yyyy hh:mm:ss</string>
+    <string name="filetime_format_mode_MMddyyyy_HHmmss" translatable="false">mm/dd/yyyy hh:mm:ss</string>
+    <string name="filetime_format_mode_yyyyMMdd_HHmmss" translatable="false">yyyy-mm-dd hh:mm:ss</string>
+
+    <!-- Strings related to Settings -->
+    <string name="pref_key_filetime_format" translatable="false">pref_key_filetime_format</string>
+    <string name="pref_key_navigation_mode" translatable="false">pref_key_navigation_mode</string>
 
 </resources>
