--- a/filemanager/src/main/res/values/strings.xml
+++ b/filemanager/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="size_gigabytes">GB</string>
 
     <!--  Filetime formats -->
-    <string name="filetime_format_mode_ddMMyyyy_HHmmss" translatable="false">dd/mm/yyyy hh:mm:ss</string>
-    <string name="filetime_format_mode_MMddyyyy_HHmmss" translatable="false">mm/dd/yyyy hh:mm:ss</string>
-    <string name="filetime_format_mode_yyyyMMdd_HHmmss" translatable="false">yyyy-mm-dd hh:mm:ss</string>
+    <string name="filetime_format_mode_ddMMyyyy_HHmmss" translatable="false">dd/MM/yyyy HH:mm:ss</string>
+    <string name="filetime_format_mode_MMddyyyy_HHmmss" translatable="false">MM/dd/yyyy HH:mm:ss</string>
+    <string name="filetime_format_mode_yyyyMMdd_HHmmss" translatable="false">yyyy-MM-dd HH:mm:ss</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_key_filetime_format" translatable="false">pref_key_filetime_format</string>
